[metadata]
name = pyls-uphil
version = 0.0.1
author = Tomáš Sláma
author_email = tomas.slama.131@gmail.com
description = An Unorthodox Python Highlighter plugin for pyls.
url = https://github.com/xiaoxiae/pyls-uphil
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires = python-language-server ; mypy
python_requires = >= 3.8

[options.entry_points]
pyls = pyls_uphil = pyls_uphil.plugin
